--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,91 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: #edf2f9;
+    color: #344050;
+    font-size: "Poppins",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
+.nav-link {
+    font-size: 14px;
+    font-weight: 500;
+    display: block;
+    padding: .5rem 1rem;
+    color: #5e6e82;
+    text-decoration: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+.nav-link:focus, .nav-link:hover {
+    color: #232e3c;
+}
+
+.icon-right{
+    margin-left: 2em;
+    display: none;
+}
+
+.icon-left{
+    margin-right: 0.5em;
+    font-size: 1.3em;
+}
+
+.navbar{
+    box-shadow: 0 7px 14px 0 rgba(65,69, 88, 0.1), 0 3px 6px 0 rgba(0,0, 0, 0.07);
+}
+
+.h2-t{
+    font-weight: 600;
+    margin-left: 0.13em;
+}
+
+.bg-card {
+    background-size: contain;
+    background-position: right;
+    border-top-right-radius: .375rem;
+    border-bottom-right-radius: .375rem;
+}
+
+.bg-holder {
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    will-change: transform,opacity,filter;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-repeat: no-repeat;
+    z-index: 0;
+}
+
+.bg-200 {
+    background-color: #edf2f9 !important;
+}
+th{
+    font-weight: 600;
+    font-size: 14px !important;
+}
+
+.text-900 {
+    color: #344050 !important;
+}
+
+//#f9fafd
+.table {
+    --bs-table-bg: transparent;
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: #212529;
+    --bs-table-striped-bg: #f9fafd;
+    --bs-table-active-color: #212529;
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: #212529;
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+    vertical-align: top;
+    border-color: #dee2e6;
+}
+
+
+.table-borderless > thead > tr > th {
+    border: none;
+}
